# dual-judge

./: .gitignore  Cargo.toml  README.md  judge_config.yaml  start_lambda.sh  start_local.sh  todo.md
container/: Dockerfile  build.sh
in/: sample.txt
lambda-container/: Dockerfile  build.sh
src/: config.rs  console_styles.rs  lambda.rs  lib.rs  local.rs  submission_state.rs  summary.rs
