[package]
name = "dual-judge"
version = "2023.8.0"
edition = "2021"
authors = ["Roumcha"]

[dependencies]
anyhow = { version = "1.0.72", features = ["std", "backtrace"] }
aws-config = "0.56.0"
aws-sdk-lambda = "0.29.0"
base64 = "0.21.2"
chrono = "0.4.26"
console = "0.15.7"
flate2 = "1.0.26"
getopts = "0.2.21"
lambda_runtime = "0.8.1"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tempfile = "3.7.1"
tokio = { version = "1.30.0", features = ["full"] }
