[package]
name = "dual-judge"
version = "2023.8.1"
edition = "2021"
authors = ["Roumcha"]

[dependencies]
anyhow = { version = "1.0.75", features = ["std", "backtrace"] }
aws-config = "0.57.1"
aws-sdk-lambda = "0.35.0"
base64 = "0.21.5"
chrono = "0.4.31"
chrono-tz = "0.8.4"
console = "0.15.7"
flate2 = "1.0.28"
getopts = "0.2.21"
lambda_runtime = "0.8.2"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tempfile = "3.8.1"
tokio = { version = "1.33.0", features = ["full"] }
